--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
 
 
-  <title>Water</title>
+  <title>Evita</title>
 </head>
 
 <body>
